Fix tests in TestDataProcessingAPI.java
Mel said that my test code of 2 methods testReadSuccess() and testWriteFailure_WhenAppendFails() are somehow incomplete.